test/data/semantic-errors/lessthan-must-have-integer-operands.jen
notAnInteger := false
anInteger := 7
aBinaryExpression := anInteger < notAnInteger
